feat: modified 랜선자르기

--- a/fun_coding/백준/랜선자르기.ipynb
+++ b/fun_coding/백준/랜선자르기.ipynb
@@ -13,16 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 어찌해야하노 ㅡ_ㅡ"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 가장 작은 숫자를 먼저 찾아가서 .. 뭐고 이거 이런식으로 해야하는것같은데"
+    "# 가장 작은 숫자를 먼저 찾아가서 .. 이거 이런식으로 해야하는것같은데"
    ]
   },
   {
@@ -34,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -51,32 +42,227 @@
    ],
    "source": [
     "K, N = map(int, input().split())\n",
-    "arr = []\n",
-    "\n",
-    "for _ in range(K):\n",
-    "    arr.append(int(input()))\n",
-    "arr.sort(reverse = True)"
+    "a = []\n",
+    "for i in range(K):\n",
+    "    a.append(int(input()))\n",
+    "a.sort()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[802, 743, 539, 457]"
+       "[457, 539, 743, 802]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr"
+    "a"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 아무튼 K 보다 크나 K와 가장 근접한 숫자로 자를 수 있어야한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "231"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(a)//11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4개의 숫자를 모두 더해줘서 11개로 한다면 가장 lowest인 457이 안되니, 457//2 인\n",
+    "228 이라는건데, 228로는 743까지는 3개가 되나 802는 안된다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "802 // 228"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "115"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "231 // 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = sum(a)//N\n",
+    "end = max(a)\n",
+    "mid = start\n",
+    "\n",
+    "\n",
+    "count = 0\n",
+    "\n",
+    "\n",
+    "for value in a:\n",
+    "    count += value // mid\n",
+    "print(count)\n",
+    "\n",
+    "while \n",
+    "\n",
+    "\n",
+    "if count < N:\n",
+    "    mid = mid // 2\n",
+    "elif count > N:\n",
+    "    mid = (mid + start) // 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# N = 11\n",
+    "start = sum(a)//N\n",
+    "end = max(a)\n",
+    "mid = start\n",
+    "result = 0\n",
+    "\n",
+    "while True:\n",
+    "    count = 0\n",
+    "    \n",
+    "    for value in a:\n",
+    "        count += value // mid\n",
+    "        \n",
+    "        \n",
+    "    if count == N:\n",
+    "        result = mid\n",
+    "        break\n",
+    "#         while count+1 > count:\n",
+    "#             result = result+1\n",
+    "            \n",
+    "        \n",
+    "    elif count < N:\n",
+    "        mid = mid // 2\n",
+    "    elif count > N:\n",
+    "        mid = (mid + start) // 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "198"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 198이 최댓값이 아니니까 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
