feat: finished ㄹ랜선자르기

--- a/fun_coding/백준/랜선자르기.ipynb
+++ b/fun_coding/백준/랜선자르기.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 다시 하자 ㅠㅠ"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<img src=\"./imgs/랜선자르기.png\" width=\"60%\">"
    ]
   },
@@ -32,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -156,92 +149,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n"
+      "4 11\n",
+      "802\n",
+      "743\n",
+      "457\n",
+      "539\n"
      ]
     }
    ],
    "source": [
-    "start = sum(a)//N\n",
-    "end = max(a)\n",
-    "mid = start\n",
-    "\n",
-    "\n",
-    "count = 0\n",
-    "\n",
-    "\n",
-    "for value in a:\n",
-    "    count += value // mid\n",
-    "print(count)\n",
-    "\n",
-    "while \n",
-    "\n",
-    "\n",
-    "if count < N:\n",
-    "    mid = mid // 2\n",
-    "elif count > N:\n",
-    "    mid = (mid + start) // 2"
+    "K, N = map(int, input().split())\n",
+    "a = []\n",
+    "for i in range(K):\n",
+    "    a.append(int(input()))\n",
+    "a.sort()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-ba67a9baaca8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     19\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m                 \u001b[0;32mfor\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32min\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m                     \u001b[0mc\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;34m//\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m                 \u001b[0mresult\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "data": {
+      "text/plain": [
+       "231"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(a)//11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
      ]
     }
    ],
    "source": [
     "# N = 11\n",
     "\n",
+    "K, N = map(int, input().split())\n",
+    "a = []\n",
+    "for i in range(K):\n",
+    "    a.append(int(input()))\n",
+    "a.sort()\n",
+    "\n",
     "start = sum(a)//N\n",
     "mid = start\n",
     "result = 0\n",
-    "b = N +1\n",
+    "b = N - 1\n",
     "\n",
     "while True:\n",
     "    count = 0\n",
-    "    \n",
+    "\n",
     "    for value in a:\n",
     "        count += value // mid\n",
     "        \n",
-    "        \n",
     "    if count == N:\n",
     "        result = mid\n",
+    "        \n",
     "        while True:\n",
     "            c = 0\n",
-    "            if c < b:\n",
-    "                for value in a:\n",
-    "                    c += value // result\n",
+    "            for value in a:\n",
+    "                c += value // result\n",
+    "\n",
+    "            if c > b:\n",
     "                result += 1\n",
     "            else:\n",
+    "                result -= 1\n",
     "                break\n",
+    "        break\n",
     "    \n",
-    "\n",
-    "\n",
-    "\n",
     "    elif count < N:\n",
     "        mid = mid // 2\n",
     "    elif count > N:\n",
@@ -249,24 +247,6 @@
     "\n",
     "print(result)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3874865"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -302,32 +282,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-74-bdd2aa5ca029>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcount\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m196\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32min\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m         \u001b[0mcount\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;34m//\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mresult\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "while b > count:\n",
-    "    count = 0\n",
-    "    result = 196\n",
-    "    for value in a:\n",
-    "        count += value // result\n",
-    "    result += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 79,
    "metadata": {},
    "outputs": [
@@ -351,7 +305,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 다르게 풀기\n",
+    "def findLAN(left, right):\n",
+    "    result = 0\n",
+    "\n",
+    "    while left <= right:\n",
+    "        mid = (left + right) // 2\n",
+    "        count = 0\n",
+    "        for lan in LANs:\n",
+    "            count += lan // mid\n",
+    "        if count < N:\n",
+    "            right = mid - 1\n",
+    "        else:\n",
+    "            result = max(result, mid)\n",
+    "            left = mid + 1\n",
+    "    print(result)\n",
+    "\n",
+    "\n",
+    "K, N = map(int, input().split())\n",
+    "LANs = []\n",
+    "for _ in range(K):\n",
+    "    LANs.append(int(input()))\n",
+    "findLAN(0, max(LANs))"
+   ]
   },
   {
    "cell_type": "code",
@@ -384,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
