Feat: added more Q

--- a/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter1_숫자.ipynb
+++ b/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter1_숫자.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.7.1 연습문제"
+    "### 1.7.1 연습문제(base -> decimal)"
    ]
   },
   {
@@ -100,6 +100,140 @@
     "if __name__ == \"__main__\":\n",
     "    test_convert_to_decimal()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.7.1 (decimal -> base)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 10진수를 다른 진법의 숫자로 변환하는 함수를 만들어 보자 (2 <= base <= 10)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 내풀이\n",
+    "def decimal_to_base(decimal, base):\n",
+    "    result = str()\n",
+    "    while decimal >= base:\n",
+    "        result += str(decimal % base)\n",
+    "        decimal = decimal // base\n",
+    "    \n",
+    "    result += str(decimal)\n",
+    "    result = int(result[::-1])\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 9, 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 책 풀이\n",
+    "def convert_from_decimal(number, base):\n",
+    "    multiplier, result = 1,0\n",
+    "    while number > 0:\n",
+    "        result += number % base * multiplier\n",
+    "        multiplier *= 10\n",
+    "        number = number // base\n",
+    "        \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number, decimal = 8192479812472198471298472198124798, 8192479812472198471298472198124798\n",
+    "base = 9\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(324082142544531334701803105178434844, 324082142544531334701803105178434844)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_from_decimal(number, base),decimal_to_base(decimal,base)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (decimal -> base), version 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 10진수를 20이하의 진법으로 변환하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
