feat: modified Chapter1

--- a/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter1_숫자.ipynb
+++ b/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter1_숫자.ipynb
@@ -223,10 +223,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 책풀이 + 내풀이 ㅠ\n",
+    "def convert_from_decimal_larger_bases(number,base):\n",
+    "    strings = \"0123456789ABCDEFGHIJ\"\n",
+    "    result = str()\n",
+    "\n",
+    "    while number > 0:\n",
+    "        digit = number % base\n",
+    "        result = strings[digit] + result\n",
+    "        number = number // base\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Passed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test_convert_from_decimal_larger_bases():\n",
+    "    number, base = 31, 16\n",
+    "    assert(convert_from_decimal_larger_bases(number, base) == \"1F\")\n",
+    "    print(\"Test Passed!\")\n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    test_convert_from_decimal_larger_bases()"
+   ]
   },
   {
    "cell_type": "code",
@@ -234,6 +268,53 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 재귀함수를 사용한 진법변환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''under 16'''\n",
+    "def convert_dec_to_any_base_rec(number, base):\n",
+    "    convertString = \"0123456789BCDEF\"\n",
+    "    \n",
+    "    if number < base:\n",
+    "        return convertString[number]\n",
+    "    else:\n",
+    "        return convert_dec_to_any_base_rec(number // base, base) + convertString[number % base]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "테스트 통과!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test_convert_dec_to_any_base_rec():\n",
+    "    number = 9\n",
+    "    base = 2\n",
+    "    assert(convert_dec_to_any_base_rec(number, base) == \"1001\")\n",
+    "    print(\"테스트 통과!\")\n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    test_convert_dec_to_any_base_rec()"
+   ]
   },
   {
    "cell_type": "code",
