feat: finished ch1

--- a/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter1_숫자.ipynb
+++ b/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter1_숫자.ipynb
@@ -322,6 +322,218 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.7.2 최대공약수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def finding_gcd(a,b):\n",
+    "    while b != 0:\n",
+    "        result = b\n",
+    "        a, b = b, a % b\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test 통과!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test_finding_gcd():\n",
+    "    number1 = 21\n",
+    "    number2 = 12\n",
+    "    assert(finding_gcd(number1, number2) ==3)\n",
+    "    print(\"test 통과!\")\n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    test_finding_gcd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.7.4 피보나치 수열 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1 1 2 3 5 8 13 21 ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_fibonacci(n):\n",
+    "    if n < 2: \n",
+    "        return n\n",
+    "    return find_fibonacci(n - 1) + find_fibonacci(n -2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_fibonacci(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.7.5 소수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3가지 조건\n",
+    "# 1) a> m 이면, b < m\n",
+    "# 2) a = m 이면, b = m\n",
+    "# 3) a < m 이면, b > m\n",
+    "\n",
+    "# https://stackoverflow.com/questions/5811151/why-do-we-check-up-to-the-square-root-of-a-prime-number-to-determine-if-it-is-pr/5813926#5813926\n",
+    "\n",
+    "# 이 원리에 따라 다음식이 성립"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def finding_prime_sqrt(number):\n",
+    "    num = abs(number)\n",
+    "    if num < 4:\n",
+    "        return True\n",
+    "    for x in range(2, int(math.sqrt(num)) + 1):\n",
+    "        if number % x == 0:\n",
+    "            return False\n",
+    "        \n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 페르마의 소정리\n",
+    "\n",
+    "def finding_prime_fermat(number):\n",
+    "    if number <= 102:\n",
+    "        for a in range(2, number):\n",
+    "            if pow(a, number-1, number) != 1:\n",
+    "                return False\n",
+    "        return True\n",
+    "    \n",
+    "    else:\n",
+    "        for i in range(100):\n",
+    "            a = random.randint(2, number - 1)\n",
+    "            if pow(a, number - 1, number) != 1:\n",
+    "                return False\n",
+    "        return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
