Feat: finished 백준_주식

--- a/fun_coding/백준/주식.ipynb
+++ b/fun_coding/백준/주식.ipynb
@@ -4,19 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 다시하자 ㅠㅠ"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<img src=\"./imgs/주식.png\" width=\"60%\">"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,11 +23,13 @@
     "    n = len(prices)\n",
     "    accumulated_profit = 0\n",
     "    min_price = stock[0]\n",
-    "\n",
+    "    max_profit = 0\n",
     "    \n",
     "    \n",
     "    for i in range(1,n):\n",
+    "        \n",
     "        profit = prices[i] - min_price\n",
+    "        \n",
     "        if profit > max_profit:\n",
     "            max_profit = profit\n",
     "        \n",
@@ -48,22 +43,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 1, 3]"
+       "2"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stock"
+    "max_profit(stock)"
    ]
   },
   {
@@ -228,26 +223,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ac_profit"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -284,6 +259,92 @@
     "    return max_profit\n",
     "        \n",
     "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 뒤에서부터 오면서 뒤에가 앞보다 크면 빼고 맥스에 더해준후, 앞에껄 팝\n",
+    "# 앞에가 더 크면 뒤에껄 팝 이걸 while로?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(3,-1,-1):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def max_profit(prices):\n",
+    "    n = len(prices)\n",
+    "    max_profit = 0\n",
+    "    max_price = prices[-1]\n",
+    "    \n",
+    "    for i in range(n-2,-1,-1):\n",
+    "        if max_price > prices[i]:\n",
+    "            max_profit += max_price - prices[i]\n",
+    "        else:\n",
+    "            max_price = prices[i]\n",
+    "            \n",
+    "    return max_profit\n",
+    "\n",
+    "for i in range(int(input())):\n",
+    "    days = int(input())\n",
+    "    stock = list(map(int, input().split()))\n",
+    "    print(max_profit(stock))\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "3\n",
+      "10 7 6\n",
+      "0\n",
+      "3\n",
+      "3 5 9\n",
+      "10\n",
+      "5\n",
+      "1 1 3 1 2\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(int(input())):\n",
+    "    days = int(input())\n",
+    "    stock = list(map(int, input().split()))\n",
+    "    print(max_profit(stock))"
    ]
   },
   {
