feat: added Progrrammers_124숫자의나라

--- a/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter1_숫자.ipynb
+++ b/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter1_숫자.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.7.1 연습문제(base -> decimal)"
+    "## 1.7.1 연습문제(base -> decimal)"
    ]
   },
   {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -324,8 +324,10 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### 1.7.2 최대공약수"
    ]
