Feat: added  다리를지나는트럭

--- a/fun_coding/Programmers/level2/주식가격_복사본.ipynb
+++ b/fun_coding/Programmers/level2/주식가격_복사본.ipynb
@@ -1,11 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "<img src=\"./imgs/주식가격.png\" width=\"60%\">"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -50,7 +50,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 다른사람풀이 (deque를 이용해 풀었다.)\n",
+    "from collections import deque\n",
+    "def solution(prices):\n",
+    "    answer = []\n",
+    "    prices = deque(prices)\n",
+    "    while prices:\n",
+    "        c = prices.popleft()\n",
+    "\n",
+    "        count = 0\n",
+    "        for i in prices:\n",
+    "            if c > i:\n",
+    "                count += 1\n",
+    "                break\n",
+    "            count += 1\n",
+    "\n",
+    "        answer.append(count)\n",
+    "\n",
+    "    return answer"
+   ]
   },
   {
    "cell_type": "code",
