--- a/fun_coding/Programmers/level2/주식가격.ipynb
+++ b/fun_coding/Programmers/level2/주식가격.ipynb
@@ -1,11 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<img src=\"./imgs/주식가격.png\" width=\"60%\">"
+   ]
   },
   {
    "cell_type": "code",
@@ -50,26 +50,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 다른사람풀이 (deque를 이용해 풀었다.)\n",
-    "from collections import deque\n",
-    "def solution(prices):\n",
-    "    answer = []\n",
-    "    prices = deque(prices)\n",
-    "    while prices:\n",
-    "        c = prices.popleft()\n",
-    "\n",
-    "        count = 0\n",
-    "        for i in prices:\n",
-    "            if c > i:\n",
-    "                count += 1\n",
-    "                break\n",
-    "            count += 1\n",
-    "\n",
-    "        answer.append(count)\n",
-    "\n",
-    "    return answer"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
