feat: added programmers_level2_탑

--- a/fun_coding/Programmers/level2/기능개발.ipynb
+++ b/fun_coding/Programmers/level2/기능개발.ipynb
@@ -49,7 +49,7 @@
     "    result = []\n",
     "    \n",
     "    while len(progresses) > 0:\n",
-    "        \n",
+    "\n",
     "        if progresses[0] >= 100:\n",
     "            count = 0\n",
     "            for i in range(len(progresses)):\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,32 +106,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 다른사람 풀이 (뭐 어케푼거여 -_-;ㅋ)\n",
+    "# 다른사람 풀이 (뭐 무슨논린지; -_-;ㅋ)\n",
     "def solution2(progresses, speeds):\n",
     "    Q=[]\n",
     "    for p, s in zip(progresses, speeds):\n",
     "        if len(Q)==0 or Q[-1][0]<-((p-100)//s):\n",
     "            Q.append([-((p-100)//s),1])\n",
+    "            print(Q)\n",
     "        else:\n",
     "            Q[-1][1]+=1\n",
+    "\n",
     "    return [q[1] for q in Q]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4 µs, sys: 1e+03 ns, total: 5 µs\n",
-      "Wall time: 9.06 µs\n"
+      "[[7, 1]]\n",
+      "[[7, 2], [9, 1]]\n"
      ]
     },
     {
@@ -140,13 +142,12 @@
        "[2, 1]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%time\n",
     "solution2(progresses,speeds)"
    ]
   },
