feat: added 프린터_큐_enumerate사용

--- a/fun_coding/백준/프린터큐.ipynb
+++ b/fun_coding/백준/프린터큐.ipynb
@@ -171,6 +171,9 @@
     "\n",
     "\n",
     "print(\"초기 상황: \", queue)\n",
+    "\n",
+    "cycle = 0\n",
+    "count = 0\n",
     "while cycle <= 10:\n",
     "    cycle += 1\n",
     "    paper = queue.pop(0)\n",
@@ -187,24 +190,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1 9 1 1 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "queue = list(enumerate(map(int, input().split())))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "zz"
+   ]
   }
  ],
  "metadata": {
